--- a/MiracleListBW/wwwroot/index.html
+++ b/MiracleListBW/wwwroot/index.html
@@ -15,7 +15,7 @@
 
 <!-- Für PWA-->
  <link href="manifest.json" rel="manifest" />
- <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
+ <link rel="apple-touch-icon" sizes="512x512" href="MiracleListIcon-512.png" />
 
  <style>
   background: rgba(255, 221, 134, 1) !important;
