--- a/MiracleListBW/wwwroot/index.html
+++ b/MiracleListBW/wwwroot/index.html
@@ -6,7 +6,7 @@
  <title>MiracleList BW</title>
  <base href="/" />
 
- <!--Bootstrap und eigenes Styles -->
+ <!--Bootstrap und eigene Styles -->
  <link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
  <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
  <link href="styles.css" rel="stylesheet" />
