--- a/MiracleListBW/wwwroot/index.html
+++ b/MiracleListBW/wwwroot/index.html
@@ -13,9 +13,12 @@
  <script src="js/jquery.js" defer></script>
  <script src="js/bootstrap.min.js" defer></script>
 
-<!-- Für PWA-->
+ <!-- Für PWA-->
  <link href="manifest.json" rel="manifest" />
  <link rel="apple-touch-icon" sizes="512x512" href="MiracleListIcon-512.png" />
+
+ <!--Für Blazored.Toast (Teil 5)-->
+ <link href="_content/Blazored.Toast/blazored-toast.min.css" rel="stylesheet" />
 
  <style>
   background: rgba(255, 221, 134, 1) !important;
