--- a/MiracleListBW/wwwroot/index.html
+++ b/MiracleListBW/wwwroot/index.html
@@ -12,8 +12,8 @@
  <link href="styles.css" rel="stylesheet" />
  <script src="js/jquery.js" defer></script>
  <script src="js/bootstrap.min.js" defer></script>
-
-<!-- Für PWA-->
+ <link href="_framework/scoped.styles.css" rel="stylesheet" />
+ <!-- Für PWA-->
  <link href="manifest.json" rel="manifest" />
  <link rel="apple-touch-icon" sizes="512x512" href="MiracleListIcon-512.png" />
 
