--- a/MiracleListBW/wwwroot/index.html
+++ b/MiracleListBW/wwwroot/index.html
@@ -46,6 +46,7 @@
   </div>
   <!-- Standard-JS-Lib von Microsoft für Blazor WebAssembly -->
   <script src="_framework/blazor.webassembly.js" autostart="true"></script>
+  <script src="/_content/MiracleListRCL/JSUtil.js"></script>
   <!--Für PWA-->
   <script>navigator.serviceWorker.register('service-worker.js');</script>
  </div>
