Aufräumen: CSS-Styles und Warnungen

--- a/MiracleListBW/wwwroot/index.html
+++ b/MiracleListBW/wwwroot/index.html
@@ -20,6 +20,9 @@
  <!--Für Blazored.Toast (Teil 5)-->
  <link href="_content/Blazored.Toast/blazored-toast.min.css" rel="stylesheet" />
 
+ <!--Für CSS-Isolation-Styles aus Hauptprojekt und RCL-->
+ <link href="MiracleListBW.styles.css" rel="stylesheet" />
+
  <style>
   background: rgba(255, 221, 134, 1) !important;
  </style>
