Aufräumen: CSS-Styles und Warnungen

--- a/MiracleListBW/wwwroot/index.html
+++ b/MiracleListBW/wwwroot/index.html
@@ -17,6 +17,9 @@
  <link href="manifest.json" rel="manifest" />
  <link rel="apple-touch-icon" sizes="512x512" href="MiracleListIcon-512.png" />
 
+ <!--Für CSS-Isolation-Styles aus Hauptprojekt und RCL-->
+ <link href="MiracleListBW.styles.css" rel="stylesheet" />
+
  <style>
   background: rgba(255, 221, 134, 1) !important;
  </style>
