--- a/MiracleListBW/wwwroot/index.html
+++ b/MiracleListBW/wwwroot/index.html
@@ -6,19 +6,16 @@
  <title>MiracleList BW</title>
  <base href="/" />
 
- <!--Bootstrap und eigene Styles -->
+ <!--Bootstrap und eigenes Styles -->
  <link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
  <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
  <link href="styles.css" rel="stylesheet" />
  <script src="js/jquery.js" defer></script>
  <script src="js/bootstrap.min.js" defer></script>
-
+ <link href="_framework/scoped.styles.css" rel="stylesheet" />
  <!-- Für PWA-->
  <link href="manifest.json" rel="manifest" />
  <link rel="apple-touch-icon" sizes="512x512" href="MiracleListIcon-512.png" />
-
- <!--Für Blazored.Toast (Teil 5)-->
- <link href="_content/Blazored.Toast/blazored-toast.min.css" rel="stylesheet" />
 
  <style>
   background: rgba(255, 221, 134, 1) !important;
